--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,109 @@
 :root {
-   --background-main-color: hsl(47, 88%, 63%);
-   --container-background-color:White: hsl(0, 0%, 100%);
-   --primary-font-color: hsl(0, 0%, 7%);
-   --secondary-forn-color: hsl(0, 0%, 50%)
+  --background-main-color: hsl(47, 88%, 63%);
+  --container-background-color: hsl(0, 0%, 100%);
+  --primary-font-color: hsl(0, 0%, 7%);
+  --secondary-font-color: hsl(0, 0%, 50%);
+}
+
+body {
+  background-color: var(--background-main-color);
+  font-family: Figtree;
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex: 1; /* Dodajemy flex: 1, aby main zajmował dostępną przestrzeń */
+}
+main {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  padding: 1.5rem;
+  padding-top: 2.5rem;
+}
+img {
+  display: block;
+}
+
+.card {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  max-width: 380px;
+  background-color: var(--container-background-color);
+  border: 1px solid var(--primary-font-color);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  box-shadow: 10px 10px 0px 0px var(--primary-font-color);
+
+  color: var(--primary-font-color);
+  margin-bottom: 100px;
+  animation: appear 2s;
+}
+@keyframes appear {
+  0% {
+    scale: 0;
+    opacity: 0;
+    rotate: 0deg;
+    box-shadow: none;
   }
-body{
-    background-color: var(--background-main-color);
-    font-family: Figtree;
-};
-.card{
-    background-color: var(--container-background-color);
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    text-align: center;
-    border: 1px solid;
-    
+  85% {
+    box-shadow: none;
+  }
+  100% {
+    scale: 1;
+    opacity: 1;
+    rotate: 360deg;
+    box-shadow: 10px 10px 0px 0px var(--primary-font-color);
+  }
+}
+.card__image {
+  border-radius: 1rem;
+}
+
+.card__heading {
+  padding: 8px 12px;
+  max-width: fit-content;
+  border-radius: 0.3rem;
+  background-color: var(--background-main-color);
+  font-size: 16px;
+  margin: 16px 0;
+}
+
+.card__paragraph {
+  font-size: 16px;
+  margin: 0;
+}
+
+.card__main_heading {
+  font-size: 24px;
+  margin-bottom: 0;
+}
+.card__main_heading:hover {
+  color: var(--background-main-color);
+  cursor: pointer;
+}
+
+.card__description {
+  padding-right: 15px;
+  font-size: 16px;
+  color: var(--secondary-font-color);
+  line-height: 1.5rem;
+  text-align: justify;
+}
+
+.card__author {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+}
+
+.card__author_photo {
+  max-width: 35px;
+  max-height: 35px;
+}
+.card__author_name {
+  font-size: 16px;
+  font-weight: 800;
 }
