--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,7 @@ main {
   display: flex;
   height: 100%;
   flex-direction: column;
-  padding: 1.5rem;
-  padding-top: 2.5rem;
+  margin: 0;
 }
 img {
   display: block;
@@ -30,11 +29,11 @@ img {
   margin: auto;
   display: flex;
   flex-direction: column;
-  max-width: 380px;
+  max-width: 375px;
   background-color: var(--container-background-color);
   border: 1px solid var(--primary-font-color);
   border-radius: 1rem;
-  padding: 1.5rem;
+  padding: 20px;
   box-shadow: 10px 10px 0px 0px var(--primary-font-color);
 
   color: var(--primary-font-color);
@@ -106,4 +105,22 @@ img {
 .card__author_name {
   font-size: 16px;
   font-weight: 800;
+}
+.attribution {
+  text-align: center;
+  padding: 20px;
+}
+
+@media (max-width: 375px) {
+  body {
+    font-size: 14px;
+  }
+
+  .card {
+    max-width: 80%;
+  }
+  .card__main_heading {
+    font-size: 20px;
+    margin-bottom: 0;
+  }
 }
